A small gap was appearing to the right of the tab bar. fixed.

--- a/src/themes/atomic-light-ui/main-ui.scss
+++ b/src/themes/atomic-light-ui/main-ui.scss
@@ -50,7 +50,6 @@
 }
 
 #ID_MAIN_CONTENTS > #ID_GAP {
-  visibility: collapse;
   flex: 0px 0 0;
   position: relative;
   background-color: $tab-background-color-active;
